mobile view is set with responsive design

--- a/style.css
+++ b/style.css
@@ -1,18 +1,9 @@
-/*.scrolling-wrapper {*/
-/*    overflow-x: scroll;*/
-/*    overflow-y: hidden;*/
-/*    white-space: nowrap;*/
-/*}*/
-
-/*.scrolling-wrapper .product-card {*/
-/*    display: inline-block;*/
-/*}*/
-
 .scrolling-wrapper-flexbox {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
 }
+
 
 .scrolling-wrapper-flexbox .product-card {
     flex: 0 0 auto;
@@ -20,25 +11,35 @@
     width: 400px;
 }
 
+
+.scrolling-wrapper-flexbox .nav-item {
+    flex: 0 0 auto;
+    margin-right: 5px;
+}
+
+
 .scrolling-wrapper-flexbox {
-    margin-bottom: 20px;
     width: 99%;
     -webkit-overflow-scrolling: touch;
 }
+
 
 .scrolling-wrapper-flexbox::-webkit-scrollbar {
     display: none;
 }
 
-.before {
+
+.beforeIcon {
     top: 280px;
     left: 300px;
 }
 
-.after {
+
+.afterIcon {
     top: 280px;
     right: 18px;
 }
+
 
 .navigateIcon {
     position: absolute;
@@ -57,12 +58,13 @@
     'menu main main main main main'
     'menu footer footer footer footer footer';
     gap: 2px;
-    /*background-color: #161718;*/
 }
+
 
 .header {
     grid-area: header;
 }
+
 
 .header a {
     color: #777777;
@@ -72,10 +74,13 @@
 
 .menu {
     grid-area: menu;
-    background-color: #c9c8c8;
     border-radius: 15px;
     width: 280px;
+    background-color: #eeeeee;
+    grid-column: 1 / 2;
+    grid-row: 2 / span5;
 }
+
 
 .menu a {
     color: black;
@@ -84,18 +89,20 @@
     margin-left: 10px;
 }
 
+
 .menu a:hover {
     color: #818181;
     cursor: pointer;
 }
 
+
 .main {
+    margin-bottom: 20px;
     grid-area: main;
+    grid-column: 2 / 7;
+    grid-row: 2 / span5;
 }
 
-.xx i {
-    font-size: medium;
-}
 
 .card a {
     text-decoration: none;
@@ -103,28 +110,19 @@
     font-size: small;
 }
 
+
 .footer {
     grid-area: footer;
 }
+
 
 .header {
     background-color: #eeeeee;
     grid-column: 1 / 7;
     grid-row: 1;
     padding: 8px;
-
 }
 
-.menu {
-    background-color: #eeeeee;
-    grid-column: 1 / 2;
-    grid-row: 2 / span5;
-}
-
-.main {
-    grid-column: 2 / 7;
-    grid-row: 2 / span5;
-}
 
 .footer {
     background-color: #eeeeee;
@@ -135,11 +133,13 @@
     font-size: small;
 }
 
+
 .card-footer {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 
 .active {
     background-color: rgba(131, 131, 131, 0.5) !important;
@@ -153,8 +153,54 @@
 }
 
 
-.vertical-nav .smallScreen {
+.horizontal-nav .smallScreen {
     display: none;
 }
 
+
+.horizontal-nav .menu {
+    grid-column: 1 / 7;
+    grid-row: 2;
+    width: 100%;
+    list-style: none;
+    display: block;
+}
+
+
+.horizontal-nav .menu-item {
+    display: inline;
+    position: relative;
+}
+
+
+.horizontal-nav .menuItems {
+    flex-direction: row !important;
+}
+
+
+.horizontal-nav .grid-container {
+    grid-template-areas:
+    'header header header header header header'
+    'menu menu menu menu menu menu'
+    'main main main main main main'
+    'footer footer footer footer footer footer';
+}
+
+
+.horizontal-nav .main {
+    grid-column: 1 / 7;
+    grid-row: 3 / span5;
+}
+
+
+.horizontal-nav .beforeIcon {
+    top: 400px;
+    left: 10px;
+}
+
+
+.horizontal-nav .afterIcon {
+    top: 400px;
+    right: 10px;
+}
 
